objects/ASI_Forecast_Channel_Map__c.object
<CustomObject>
    <fields>
        <fullName>ASI_Forecast_ChannelRegion_Manger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel/Region Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forecast_Channel_Maps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Channel__c</fullName>
        <formula>ASI_Forecast_Sub_Channel__r.ASI_CRM_CN_Channel__r.ASI_CRM_CN_Channel_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_National_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Manger</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forecast_Channel_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Region__c</fullName>
        <label>Region</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>SUPER</fullName>
                </value>
                <value>
                    <fullName>HYPER</fullName>
                </value>
                <value>
                    <fullName>CVS</fullName>
                </value>
                <value>
                    <fullName>MKT</fullName>
                </value>
                <value>
                    <fullName>TMKT</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>RTM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Sub_Channel_Code__c</fullName>
        <formula>ASI_Forecast_Sub_Channel__r.ASI_CRM_CN_Sub_Channel_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Channel Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Sub_Channel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub-Channel</label>
        <referenceTo>ASI_MFM_Sub_Channel__c</referenceTo>
        <relationshipLabel>Forecast Channel Maps</relationshipLabel>
        <relationshipName>Forecast_Channel_Maps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_SubmitUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit User</label>
        <type>Checkbox</type>
    </fields>
    <label>Forecast Channel Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_Forecast_Channel__c</columns>
        <columns>ASI_Forecast_Sub_Channel_Code__c</columns>
        <columns>ASI_Forecast_Sub_Channel__c</columns>
        <columns>ASI_Forecast_Region__c</columns>
        <columns>ASI_Forecast_SubmitUser__c</columns>
        <columns>ASI_Forecast_ChannelRegion_Manger__c</columns>
        <columns>ASI_Forecast_National_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Submitter</fullName>
        <columns>NAME</columns>
        <columns>ASI_Forecast_Channel__c</columns>
        <columns>ASI_Forecast_Sub_Channel_Code__c</columns>
        <columns>ASI_Forecast_Sub_Channel__c</columns>
        <columns>ASI_Forecast_Region__c</columns>
        <columns>ASI_Forecast_SubmitUser__c</columns>
        <columns>ASI_Forecast_ChannelRegion_Manger__c</columns>
        <columns>ASI_Forecast_National_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_Forecast_SubmitUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All-Submitter</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Channel Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Channel Maps</pluralLabel>
    <recordTypes>
        <fullName>ASI_Forecast_TW_ChannelMap</fullName>
        <active>true</active>
        <label>TW Forecast Channel Map</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>